# ic256-sampler

./: .cursorrules  .editorconfig  .gitignore  .ruff.toml  CHANGELOG.md  MANIFEST.in  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  debug_channel_sizes.py  debug_device_data.py  mypy.ini  pyproject.toml  requirements.txt  run.py  run_benchmarks.py  window_state.json
.github/workflows/: build.yml
ic256_sampler/: __init__.py  __main__.py  application.py  config.py  csv_writer.py  data_collection.py  debug_tools.py  device_manager.py  device_paths.py  file_path_generator.py  gui.py  gui.py.old  gui_helpers.py  ic256_model.py  igx_client.py  io_database.py  main.py  model_collector.py  simple_capture.py  statistics_aggregator.py  utils.py  virtual_database.py  window_state.json
ic256_sampler/gui/: __init__.py  main.py
ic256_sampler/gui/components/: __init__.py  button_groups.py  buttons.py  entries.py  form_fields.py  icon_buttons.py  labels.py  scrollable.py  sections.py  time_display.py  tooltip.py
ic256_sampler/gui/styles/: __init__.py  colors.py  fonts.py  sizes.py  theme.py
ic256_sampler/gui/tabs/: __init__.py  log_tab.py  main_tab.py  settings_tab.py
ic256_sampler/gui/utils/: __init__.py  file_utils.py  images.py  tab_helpers.py  thread_safe.py  window_state.py
scripts/: README.md  build_exe.ps1  build_for_ic256.iss  ic256_sampler.spec
setup/: BuildForIC256.iss  README.md  build-exe.ps1  ic256-sampler.spec
tests/: README.md  __init__.py  benchmark_databases.py  conftest.py  test_application.py  test_application_data_collection.py  test_application_file_size.py  test_csv_writer.py  test_device_manager.py  test_device_paths.py  test_e2e_application.py  test_ic256_model.py  test_incremental_rebuild.py  test_integration.py  test_io_database.py  test_model_collector_integration.py  test_simple_capture.py  test_stop_non_blocking.py  test_utils.py  test_virtual_database.py  test_virtual_database_error_handling.py  test_websocket_persistence.py
tests/benchmarks/: benchmark_databases.py
tests/integration/: __init__.py
tests/integration/application/: __init__.py  test_application_file_size.py  test_application_flow.py  test_e2e_application.py
tests/integration/collector/: __init__.py  test_model_collector_integration.py  test_simple_capture.py  test_statistics_accuracy.py
tests/integration/database/: __init__.py
tests/integration/devices/: __init__.py  test_data_collection_rate.py  test_device_connection.py  test_device_paths.py
tests/integration/manager/: __init__.py
tests/integration/websocket/: __init__.py  test_connection_status.py  test_websocket_persistence.py
tests/integration/writer/: __init__.py  test_csv_writer_integration.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py  test_application.py
tests/unit/collector/: test_model_collector.py
(+13 files in other folders)
